gccida/c2/lookup_field
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/lookup_field/src/c-typeck.c:1516:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *values; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/lookup_field/src/c-typeck.c:1521:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v9; // rcx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/lookup_field/src/c-typeck.c:1522:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v10; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/lookup_field/src/c-typeck.c:1523:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node **v11; // r12 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/lookup_field/src/c-typeck.c:1524:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v12; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/lookup_field/src/c-typeck.c:1527:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v15; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/lookup_field/src/c-typeck.c:1528:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *name; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/lookup_field/src/c-typeck.c:1571:22: error: expected expression
v15 = *( tree_node **)&f[2 * v7 + 2]; 
                     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/lookup_field/src/c-typeck.c:1571:10: error: use of undeclared identifier 'tree_node'
v15 = *( tree_node **)&f[2 * v7 + 2]; 
         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/lookup_field/src/c-typeck.c:1586:25: error: expected expression
values = *( tree_node **)&f[2 * v8 + 2]; 
                        ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/lookup_field/src/c-typeck.c:1586:13: error: use of undeclared identifier 'tree_node'
values = *( tree_node **)&f[2 * v8 + 2]; 
            ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/lookup_field/src/c-typeck.c:1605:22: error: expected expression
v10 = *( tree_node **)&f[2 * v7 + 2]; 
                     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/lookup_field/src/c-typeck.c:1605:10: error: use of undeclared identifier 'tree_node'
v10 = *( tree_node **)&f[2 * v7 + 2]; 
         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/lookup_field/src/c-typeck.c:1615:21: error: expected expression
v11 = ( tree_node **)&f[2 * v7 + 4]; 
                    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/lookup_field/src/c-typeck.c:1615:9: error: use of undeclared identifier 'tree_node'
v11 = ( tree_node **)&f[2 * v7 + 4]; 
        ^
15 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/lookup_field/src/obj/c-typeck.o] Error 1
